# mss-python

./: .flake8  .gitignore  LICENSE  README.md  client.py  main.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/simple/: main.py
src/: client.py
src/mss_python/: client.py
src/mss_python.egg-info/: PKG-INFO  SOURCES.txt
src/mss_python/request/: method_names.py  methods.py  types_mss.py
src/request/: methods.py  types_mss.py
